# vkQuake

./: .clang-format  .gitignore  CMakeLists.txt  build-macos.sh  build_and_run.bat  error_reporting_howto.md  format.sh  helgrind.supp  meson.build  meson_options.txt  readme.md  run_vkquake.bat  shell.nix  test_fastload_faceanim.bat  vs-chromium-project.txt
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: build-linux.yml  build-mac.yml  build-mingw.yml  build-msys2-clangarm64.yml  build-windows.yml  ccpp.yml  clang-format-check.yml  main.yml
AppImage/: appimagetool-x86_64.AppImage  build-appimage.sh  get-version.sh  run-in-docker.sh
AppImage/docker/: Dockerfile
Misc/: fitzquake080.txt  fitzquake080sdl.txt  fitzquake085.txt  fs_search_order.patch  mboit_sim.py  mk_header.c  quake_retexturing_project.patch  systest.c  test_faceanim.cfg  test_userdir.c  vkquake.desktop
Misc/qs_pak/: Makefile  default.cfg  mkpak.sh
Misc/qs_pak/gfx/: conback.lmp
Misc/qs_pak/maps/: e1m1.ent  e1m1.ent.orig  e2m2.ent.orig  e2m3.ent  e2m7.ent.orig
Misc/vq_pak/: Makefile  default.cfg  default.cfg.orig  mkpak.c  run_mkpak.ps1  vq_pak_contents.txt
Misc/vq_pak/gfx/: mainmenu2.lmp  p_mods.lmp  sp_maps.lmp
Misc/vq_pak/maps/: e1m2.ent  e1m2.ent.orig  e1m4.ent.orig  e1m4@958e.ent  e2m2.ent  e2m3.ent.orig  e2m7@10a8.ent  r2m3@63f4.ent  r2m3@76ec.ent
Packaging/AppImage/: Reading_Stack_Traces_HOWTO_Linux.md  build-appimage.sh  get-version.sh  linuxdeploy-plugin-appimage-x86_64.AppImage  ninja  run-in-docker.sh
Packaging/AppImage/docker/: Dockerfile
Packaging/MacOS/: Reading_Stack_Traces_HOWTO_MacOS.md
Packaging/Windows/: createinstallers.bat  createinstallers.ps1  vkQuake.nsi
Packaging/macOS/: arm64-darwin.txt  build.sh  x86_64-darwin.txt
Quake/: .clang-format  Makefile  Makefile.darwin  Makefile.w32  Makefile.w64  Makefile.w64a  anorm_dots.h  anorms.h  arch_def.h  atomics.h  bgmusic.c  bgmusic.h  bspfile.h  build_cross_osx-sdl2.sh  build_cross_osx.sh  build_cross_win32-sdl2.sh  build_cross_win32.sh  build_cross_win64-sdl2.sh  build_cross_win64.sh  cd_null.c  cd_sdl.c  cdaudio.h  cfgfile.c  cfgfile.h  chase.c  cl_demo.c  cl_input.c  cl_main.c  cl_parse.c  cl_tent.c  client.h  cmd.c  cmd.h  common.c  common.h  common.make  console.c  console.h  crc.c  crc.h  (+169 more)
Quake/mimalloc/: alloc-aligned.c  alloc-posix.c  alloc.c  arena.c  heap.c  init.c  mimalloc-internal.h  options.c  os.c  page.c  random.c  region.c  segment.c  stats.c
Quake/mimalloc/mimalloc/: bits.h
Shaders/: alias.frag  alias.vert  alias_alphatest.frag  alias_alphatest_mbot.frag  alias_alphatest_oit.frag  alias_alphatest_wavelet_bounds.frag  alias_alphatest_wavelet_coeff.frag  alias_alphatest_wavelet_shade.frag  alias_common.inc  alias_mbot.frag  alias_oit.frag  alias_wavelet_bounds.frag  alias_wavelet_coeff.frag  alias_wavelet_shade.frag  basic.frag  basic.vert  basic_alphatest.frag  basic_char.frag  basic_common.inc  basic_frag.c  basic_mbot.frag  basic_notex.frag  basic_oit.frag  basic_vert.c  basic_wavelet_bounds.frag  basic_wavelet_coeff.frag  basic_wavelet_shade.frag  bintoc.c  compile.bat  compile.sh  compile.zsh  compileMac.sh  cs_tex_warp.comp  depth_peel.frag  globals.inc  hybrid_resolve.frag  hybrid_resolve_msaa.frag  indirect.comp  indirect_clear.comp  mboit.inc  (+56 more)
Shaders/Compiled/: alias.frag.c  alias_alphatest.frag.c  alias_alphatest_frag.c  alias_alphatest_mbot.frag.c  alias_alphatest_oit.frag.c  alias_frag.c  alias_mbot.frag.c  alias_oit.frag.c  alias_vert.c  basic.vert.c  basic_alphatest.frag.c  basic_alphatest_frag.c  basic_char_frag.c  basic_frag.c  basic_mbot.frag.c  basic_notex_frag.c  basic_oit.frag.c  basic_vert.c  cs_tex_warp_comp.c  depth_peel.frag.c  depth_peel.fspv  hybrid_resolve.frag.c  hybrid_resolve.fspv  hybrid_resolve_msaa.frag.c  hybrid_resolve_msaa.fspv  mbot_resolve.frag.c  mbot_resolve_msaa.frag.c  postprocess_frag.c  postprocess_vert.c  screen_effects_10bit_comp.c  screen_effects_10bit_scale.comp.c  screen_effects_10bit_scale_comp.c  screen_effects_10bit_scale_sops.comp.c  screen_effects_10bit_scale_sops_comp.c  screen_effects_8bit_comp.c  screen_effects_8bit_scale_comp.c  screen_effects_8bit_scale_sops_comp.c  screen_warp_comp.c  screen_warp_rgba8_comp.c  showtris.vert.c  (+15 more)
Shaders/Compiled/Debug/: alias.frag.c  alias.vert.c  alias_alphatest.frag.c  basic.frag.c  basic.vert.c  basic_alphatest.frag.c  basic_notex.frag.c  cs_tex_warp.comp.c  indirect.comp.c  indirect_clear.comp.c  postprocess.frag.c  postprocess.vert.c  ray_debug.comp.c  screen_effects_10bit.comp.c  screen_effects_10bit_scale.comp.c  screen_effects_10bit_scale_sops.comp.c  screen_effects_8bit.comp.c  screen_effects_8bit_scale.comp.c  screen_effects_8bit_scale_sops.comp.c  showtris.frag.c  showtris.vert.c  sky_box.frag.c  sky_cube.frag.c  sky_cube.vert.c  sky_layer.frag.c  sky_layer.vert.c  update_lightmap.comp.c  update_lightmap_rt.comp.c  world.frag.c  world.vert.c
Shaders/Compiled/Release/: alias.frag.c  alias.vert.c  alias_alphatest.frag.c  basic.frag.c  basic.vert.c  basic_alphatest.frag.c  basic_notex.frag.c  cs_tex_warp.comp.c  indirect.comp.c  indirect_clear.comp.c  postprocess.frag.c  postprocess.vert.c  ray_debug.comp.c  screen_effects_10bit.comp.c  screen_effects_10bit_scale.comp.c  screen_effects_10bit_scale_sops.comp.c  screen_effects_8bit.comp.c  screen_effects_8bit_scale.comp.c  screen_effects_8bit_scale_sops.comp.c  showtris.frag.c  showtris.vert.c  sky_box.frag.c  sky_cube.frag.c  sky_cube.vert.c  sky_layer.frag.c  sky_layer.vert.c  update_lightmap.comp.c  update_lightmap_rt.comp.c  (+2 more)
Windows/: QuakeSpasm.rc  vkQuake.rc
Windows/VisualStudio/: UpgradeLog.htm  bintoc.vcxproj  bintoc.vcxproj.filters  embedded.vcxproj  embedded.vcxproj.filters  mkpak.vcxproj  mkpak.vcxproj.filters  quakespasm-sdl2.vcproj  quakespasm-sdl2.vcxproj  quakespasm-sdl2.vcxproj.filters  quakespasm.vcproj  quakespasm.vcxproj  quakespasm.vcxproj.filters  shaders.vcxproj  vkquake.sln  vkquake.vcxproj  vkquake.vcxproj.filters
tests/: test_invariant_gl_texmgr.py
(+90 files in other folders)
